# MocapNET

./: CMakeLists.txt  README.md  citation.bib  createRandomizedDataset.sh  createTestDataset.sh  getOpenCV3.2.sh  initialize.ipynb  initialize.sh  license.txt  mocapnet4.ipynb  revert.sh  update.sh
GroundTruthGenerator/: CMakeLists.txt  GroundTruthDumper.layout  main.c
MocapNETFromJSON/: CMakeLists.txt  mocapnetJSON.cpp
MocapNETHTTP/: MocapNETHTTP.cbp  MocapNETHTTP.layout  webserver.cpp
MocapNETLib/: CMakeLists.txt  InputParser_C.cpp  bvh.cpp  bvh.hpp  convertBVHToCSV.cpp  convertBody25JsonToCSV.cpp  csv.cpp  csv.hpp  gestureRecognition.cpp  gestureRecognition.hpp  jsonCocoSkeleton.cpp  jsonCocoSkeleton.h  jsonMocapNETHelpers.cpp  jsonMocapNETHelpers.hpp  mocapnet.cpp  mocapnet.hpp  nsdm.cpp  nsdm.hpp  opengl.cpp  opengl.hpp  outputFiltering.cpp  outputFiltering.hpp  remoteExecution.cpp  tools.cpp  tools.h  visualization.cpp  visualization.hpp
MocapNETServerHTTP/: README.md  webserver.cpp
MocapNETSimpleBenchmark/: CMakeLists.txt  benchmark.cpp  testCodeInput.hpp  testCodeJSONInput.hpp
Tensorflow/: tensorflow.cpp  tensorflow.hpp  tf_utils.cpp  tf_utils.hpp
Webcam/: CMakeLists.txt  webcam.cpp
WebcamAndDeepJoint/: CMakeLists.txt  cameraControl.cpp  cameraControl.hpp  test.cpp  utilities.cpp  utilities.hpp
cmake/: FindSSE.cmake
dataset/: CMU_Sample_05_01.bvh  README.md  axis.bvh  cube.conf  gopro1080p.calib  human3D.conf  (+10 more)
src/BVHGUI/: CMakeLists.txt  bvhgui.cpp
src/Converters/: CMakeLists.txt  convertBVHToCSV.cpp  convertBody25JsonToCSV.cpp  convertOpenPoseJSONToCSV.cpp
src/GroundTruthGenerator/: CMakeLists.txt  GroundTruthDumper.cbp  README.md
src/HelloWorld/: CMakeLists.txt  main.cpp  testCMake.sh
src/JointEstimator2D/: CMakeLists.txt  cameraControl.cpp  cameraControl.hpp  jointEstimator2D.cpp  jointEstimator2D.h  jointEstimator2D.hpp  visualization.cpp  visualization.hpp  webcamAnd2DJoints.cpp
src/MocapNET1/MocapNETLib/: CMakeLists.txt  bvh.cpp  csv.cpp  generated_body_front.h  generated_lhand_front.h  generated_rhand_front.h  gestureRecognition.cpp  gestureRecognition.hpp  jsonCocoSkeleton.cpp  jsonCocoSkeleton.h  jsonMocapNETHelpers.cpp  mocapnet.cpp  mocapnet.hpp  opengl.cpp  opengl.hpp  outputFiltering.hpp  remoteExecution.cpp  remoteExecution.hpp  tools.cpp  tools.h  visualization.cpp  visualization.hpp
src/MocapNET1/MocapNETLib/NSDM/: legacyNSDM.hpp
src/MocapNET1/MocapNETSimpleBenchmark/: CMakeLists.txt  benchmark.cpp
src/MocapNET2/BVHGUI2/: CMakeLists.txt  bvhGUI2.cpp
src/MocapNET2/BVHTemplate/: CMakeLists.txt
src/MocapNET2/CSVClusterPlot/: CMakeLists.txt  csvClusterPlot.cpp  listOfFilesToCluster  listOfFilesToClusterMocapNET1  perform2DClustering.cpp  perform2DClustering.hpp  perform3DClustering.cpp  perform3DClustering.hpp
src/MocapNET2/Converters/H36M/: CMakeLists.txt  convertH36GroundTruthToMocapNETInput.cpp
src/MocapNET2/HandOnlyTest/: CMakeLists.txt  handTest.cpp
src/MocapNET2/MocapNET2LiveWebcamDemo/: CMakeLists.txt  livedemo.cpp
src/MocapNET2/MocapNETFromCSV/: CMakeLists.txt  mocapnet2CSV.cpp
src/MocapNET2/MocapNETLib2/: CMakeLists.txt  config.h  mocapnet2.cpp  mocapnet2.hpp  remoteExecution.cpp  remoteExecution.hpp  tools.cpp  tools.hpp
src/MocapNET2/MocapNETLib2/IO/: bvh.cpp  bvh.hpp  bvhJointList  commonSkeleton.hpp  conversions.cpp  conversions.hpp  csvRead.cpp  csvRead.hpp  csvWrite.cpp  csvWrite.hpp  jsonMocapNETHelpers.cpp  jsonMocapNETHelpers.hpp  jsonRead.cpp  jsonRead.hpp  skeletonAbstraction.cpp  skeletonAbstraction.hpp  skeletonSerializedToBVHTransform.hpp
src/MocapNET2/MocapNETLib2/NSDM/: generated_body.hpp  generated_lhand.hpp  generated_lowerbody.hpp  generated_rhand.hpp  generated_upperbody.hpp
src/MocapNET2/MocapNETLib2/applicationLogic/: artifactRecognition.cpp  artifactRecognition.hpp  gestureRecognition.cpp  gestureRecognition.hpp  parseCommandlineOptions.cpp  parseCommandlineOptions.hpp  poseRecognition.cpp  poseRecognition.hpp
src/MocapNET2/MocapNETLib2/core/: core.cpp  core.hpp  multiThreaded.cpp  multiThreaded.hpp  singleThreaded.cpp  singleThreaded.hpp
src/MocapNET2/MocapNETLib2/postProcessing/: outputFiltering.hpp
src/MocapNET2/MocapNETLib2/qualityControl/: qualityControl.cpp
src/MocapNET2/MocapNETLib2/solutionParts/: body.cpp  body.hpp  face.hpp  leftHand.cpp  leftHand.hpp  lowerBody.cpp  lowerBody.hpp  rightHand.cpp  rightHand.hpp  rightHandSym.cpp  rightHandSym.hpp  upperBody.cpp  upperBody.hpp
src/MocapNET2/MocapNETLib2/visualization/: allInOne.cpp  allInOne.hpp  camera_ready.cpp  camera_ready.hpp  drawHands.cpp  drawHands.hpp  drawSkeleton.cpp  drawSkeleton.hpp  map.cpp  map.hpp  opengl.cpp  opengl.hpp  rgb.cpp  rgb.hpp  template.cpp  template.hpp  visualization.cpp  visualization.hpp  widgets.cpp  widgets.hpp
src/MocapNET2/drawCSV/: CMakeLists.txt  drawCSV.cpp
src/MocapNET2/reshapeCSVFileToMakeClassification/: CMakeLists.txt  reshapeCSV.cpp
src/MocapNET2/testCSV/: CMakeLists.txt  testCSV.cpp
src/MocapNET4/MocapNET4Test/: CMakeLists.txt  test.cpp
src/MocapNET4/MocapNETLib4/: CMakeLists.txt  config.h  mocapnet4.cpp  mocapnet4.h  tools.h
src/MocapNET4/MocapNETLib4/IO/: inputRouting.h
src/MocapNET4/MocapNETLib4/JSON/: nxjson.c  readListFile.h  readModelConfiguration.h
src/MocapNET4/MocapNETLib4/NSxM/: EDM.h  NSDM.h  NSRM.h  NSxM.h  calculations.c  calculations.h
src/MocapNET4/MocapNETLib4/PCA/: PCA.h  principleComponentAnalysis.py
src/MocapNETHTTP/: CMakeLists.txt
src/MocapNETHTTP/res/: error.html  index.html  myloader.js  vfile.html
src/MocapNETLib/: CMakeLists.txt  InputParser_C.h  bvh.cpp  bvh.hpp  convertBody25JsonToCSV.cpp  csv.cpp  csv.hpp  gestureRecognition.cpp  gestureRecognition.hpp  jsonCocoSkeleton.cpp  jsonCocoSkeleton.h  jsonMocapNETHelpers.cpp  jsonMocapNETHelpers.hpp  mocapnet.cpp  mocapnet.hpp  nsdm.cpp  opengl.cpp  remoteExecution.cpp  tools.cpp  visualization.cpp  visualization.hpp
src/MocapNETServerHTTP/: CMakeLists.txt
src/Tensorflow2/: CMakeLists.txt  main.cpp  tensorflow2.h  testtf2.cpp
src/Webcam/: CMakeLists.txt  webcam.cpp
(+180 files in other folders)
